lang/macro/tests/ui/fail/15-generic-function.stderr
error: generic is not supported for functions in liquid contract
  --> $DIR/15-generic-function.rs:12:20
   |
12 |         pub fn noop<T>(&self, value: T) {}
   |                    ^^^
